--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,16 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yitzhakstone.github.io/blog-br" # the base hostname & protocol for your site
+url: "https://yitzhakstone.github.io" # the base hostname & protocol for your site
 twitter_username: YitzhakStone
 github_username:  YitzhakStone
 
 # Build settings
 markdown: kramdown
 permalink: /:title/
-highlighter: pygments
+# highlighter: pygments
+gems:
+  - jekyll-feed
+exclude:
+  - Gemfile
+  - Gemfile.lock
