--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://YitzhakAndrade.github.io" # the base hostname & protocol for your site
-twitter_username: Yitzhak Andrade
-github_username:  Yitzhak Andrade
+twitter_username: YitzhakAndrade
+github_username:  YitzhakAndrade
 
 # Build settings
 markdown: kramdown
-permalink: /:title/
+permalink: :year/:month/:day/:title
 # highlighter: pygments
 gems:
   - jekyll-feed
