--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,6 @@
 
 # Site settings
 title: Yitzhak Andrade
-email: andrade@hotmail.com.br
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -16,6 +15,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://YitzhakAndrade.github.io" # the base hostname & protocol for your site
 twitter_username: YitzhakAndrade
 github_username:  YitzhakAndrade
+medium_username:  YitzhakAndrade
+
 
 # Build settings
 markdown: kramdown
