--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Yitzhak Andrade
+title: Zack Stone
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://YitzhakAndrade.github.io" # the base hostname & protocol for your site
-twitter_username: YitzhakAndrade
-github_username:  YitzhakAndrade
-medium_username:  YitzhakAndrade
+url: "https://ZackStone.github.io/blog" # the base hostname & protocol for your site
+twitter_username: ZackStone401
+github_username:  ZackStone
+medium_username:  ZackStone
 
 
 # Build settings
